<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/customAppBar"
            android:layout_height="wrap_content"
            android:layout_width="0dp" app:elevation="4dp" android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:text="@string/Today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/activityTitle" android:textSize="24sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginStart="16dp" android:layout_marginBottom="8dp" android:layout_marginTop="8dp"/>
        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:tabIndicatorHeight="5dp"
                app:tabSelectedTextColor="@android:color/white" app:tabTextColor="@android:color/darker_gray"
        >
            <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/setonTab" android:text="@string/Seton"
            />
            <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/johnTab" android:text="@string/StJohns"
            />
            <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/saintsTab" android:text="@string/AllSaints"
            />
            <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/jamesTab" android:text="@string/StJames"
            />
        </com.google.android.material.tabs.TabLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="0dp" android:id="@+id/bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:background="@color/colorAccent"/>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.constraintlayout.widget.ConstraintLayout>